langtools/test/tools/javac/annotations/typeAnnotations/failures/Scopes.out
Scopes.java:8:25: compiler.err.cant.resolve: kindname.class, UniqueInner, , 
Scopes.java:8:24: compiler.err.annotation.type.not.applicable
2 errors
